Fix dark mode CSS to only apply in dark mode

--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -531,7 +531,7 @@ body.dark .links a.post-open-reports {
     color: #d30404;
 }
 
-#sortby{
+body.dark #sortby{
     background: #171717;
   color: #ddd;
   font-size: smaller;
@@ -539,12 +539,12 @@ body.dark .links a.post-open-reports {
   cursor: pointer;
 }
 
-.pure-menu-item a{
+body.dark .pure-menu-item a{
   background: #171717;
   color: #fff
 }
 
-.pure-menu-item a:hover{
+body.dark .pure-menu-item a:hover{
   background: #666;
   color: #d17262;
 }
